Change width to fix scrollbar adjustment

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 
 .App {
   text-align: center;
+  width: 100vw;
 }
 
 .App-logo {
@@ -45,6 +46,10 @@ body {
   color: $text-dark;
   background-color: $background-brown;
   margin-top: max(10vh, 40px); // navbar offset
+}
+
+html {
+  // scrollbar-gutter: stable;
 }
 
 h1 {
