--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -10,7 +10,7 @@
 
 #navbar {
     position: fixed;
-    width: 100%;
+    width: 100vw;
     height: 10vh;
     min-height: 40px;
     margin: 0;
@@ -21,6 +21,8 @@
     align-items: center;
     z-index: 49;
     color: $background-brown;
+    box-sizing: border-box;
+    padding-right: 15px;
 }
 
 .navbar-group {
